--- a/story.html
+++ b/story.html
@@ -191,7 +191,7 @@
     .prev-button {
       left: 10px;
     }
-   @media (max-width: 768px) {
+  @media (max-width: 768px) {
 
   html, body {
     margin: 0;
@@ -206,32 +206,36 @@
   .layout-wrapper {
     display: block;
     width: 100%;
-    min-height: 100vh; /* 🔥 force full height */
+    min-height: 100vh;
     background-color: #0f0f0f;
   }
 
   #app-frame {
     display: block;
     width: 100%;
-    min-height: 100vh; /* 🔥 make sure app frame fills page */
+    min-height: 100vh;
     background-color: #0f0f0f;
   }
 
   .content-wrapper {
-    display: block;
-    width: 100%;
-    min-height: 100vh; /* 🔥 story content must stretch full screen */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* 🔥 center vertically */
+    align-items: center; /* 🔥 center horizontally */
+    min-height: 100vh;
+    text-align: center;
     overflow-x: hidden;
     overflow-y: auto;
+    padding: 0 10px; /* some horizontal padding */
   }
 
   #live-stats {
     position: fixed;
-    bottom: 60px;
+    bottom: 60px; /* 🔥 sits right above bottom-nav */
     left: 0;
     right: 0;
     width: 100%;
-    background-color: rgba(26, 26, 26, 0.95);
+    background-color: rgba(26, 26, 26, 0.95); /* semi-transparent */
     font-size: 0.75rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -258,6 +262,7 @@
   }
 
 }
+
 
 
   </style>
