--- a/story.html
+++ b/story.html
@@ -218,16 +218,13 @@
   }
 
   .content-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* 🔥 center vertically */
-    align-items: center; /* 🔥 center horizontally */
-    min-height: 100vh;
-    text-align: center;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 0 10px; /* some horizontal padding */
-  }
+  display: block;
+  width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 
   #live-stats {
     position: fixed;
@@ -260,7 +257,15 @@
     align-items: center;
     z-index: 1000;
   }
-
+#story-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* center vertically */
+  align-items: center; /* center horizontally */
+  min-height: calc(100vh - 240px); /* leave room for stats + nav */
+  text-align: center;
+  padding: 0 10px;
+}
 }
 
 
