--- a/story.html
+++ b/story.html
@@ -239,9 +239,10 @@
     height: 100%;
   }
 
-  #live-stats {
+ #live-stats {
     position: fixed;
-    bottom: 60px; /* sit above bottom nav */
+    top: unset;
+    bottom: 60px; /* sits above bottom nav */
     left: 0;
     right: 0;
     width: 100%;
