--- a/story.html
+++ b/story.html
@@ -307,8 +307,33 @@
   .next-button {
     right: 10px;
   }
+ .back-button {
+    position: fixed;
+    top: 20px; /* 🔥 Move down a little from top edge */
+    left: 10px;
+    font-size: 1.2rem;
+    z-index: 1001;
+    color: #ccc;
+    background: transparent;
+    border: none;
+    text-decoration: none;
+  }
 
-}
+  .profile {
+    position: fixed;
+    top: 60px; /* 🔥 Push profile pic and username under back button */
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    z-index: 1001;
+  }
+
+  .profile img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    margin-bottom: 4px;
+  }
 }
 
 
