--- a/story.html
+++ b/story.html
@@ -300,16 +300,21 @@
     right: 10px;
   }
 .back-button {
-  display: inline-block;
-  font-size: 1rem;
+  display: inline-flex; /* 🔥 behaves like a small rectangle */
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  padding: 0 12px; /* 🔥 nice rectangle shape */
+  font-size: 0.9rem;
   color: #aaa;
-  background: transparent;
-  border: none;
+  background-color: #1a1a1a; /* 🔥 match your app theme */
+  border-radius: 6px;
   text-decoration: none;
-  margin-left: 8px; /* 🔥 little gap after username */
-  position: relative; /* ✅ no fixed/absolute */
-  top: 0;
+  margin-left: 8px; /* space from username */
+  white-space: nowrap;
+  border: 1px solid #333;
 }
+
 
    .profile {
     display: flex;
