--- a/story.html
+++ b/story.html
@@ -303,8 +303,8 @@
   display: inline-flex; /* 🔥 behaves like a small rectangle */
   align-items: center;
   justify-content: center;
-  height: 200px;
-  padding: 0 2px; /* 🔥 nice rectangle shape */
+  height: 100px;
+  padding: 5px 2px; /* 🔥 nice rectangle shape */
   font-size: 0.9rem;
   color: #aaa;
   background-color: #1a1a1a; /* 🔥 match your app theme */
