--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ transform: translate(-50%, -5px);
 }
 
 }
- .kofi-sidebar-button {
+.kofi-sidebar-button {
   margin-top: 20px;
   text-align: center;
 }
@@ -345,6 +345,7 @@ transform: translate(-50%, -5px);
   height: 50px;
   width: auto;
 }
+
 
 @keyframes fadeout {
 0% { opacity: 1; }
@@ -394,7 +395,7 @@ transform: translate(-50%, -5px);
   .main-content {
     padding-bottom: 60px; /* space for bottom nav */
   }
-    .kofi-sidebar-button {
+     .kofi-sidebar-button {
     position: fixed;
     left: 50%;
     bottom: 10px;
@@ -404,7 +405,7 @@ transform: translate(-50%, -5px);
   }
 
   .kofi-sidebar-button img {
-    height: 40px; /* slightly smaller for mobile */
+    height: 40px;
   }
 }
 
@@ -425,12 +426,13 @@ transform: translate(-50%, -5px);
 <div>Stories Viewed: <span id="stat-stories">0</span></div>
 <div>Posts Posted: <span id="stat-posts">0</span></div>
 <div>Profiles Visited: <span id="stat-profiles">0</span></div>
-</div>
 <div class="kofi-sidebar-button">
   <a href="https://ko-fi.com/ethanstelter" target="_blank">
     <img src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Support me on Ko-fi" />
   </a>
 </div>
+</div>
+
 
 
 <div id="app-frame">
