--- a/index.html
+++ b/index.html
@@ -337,13 +337,17 @@ transform: translate(-50%, -5px);
 
 }
 .kofi-sidebar-button {
+  width: 100%;
   margin-top: 20px;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .kofi-sidebar-button img {
-  height: 50px;
-  width: auto;
+  max-width: 80%;
+  height: auto;
+  display: block;
 }
 
 
@@ -395,17 +399,20 @@ transform: translate(-50%, -5px);
   .main-content {
     padding-bottom: 60px; /* space for bottom nav */
   }
-     .kofi-sidebar-button {
+      .kofi-sidebar-button {
     position: fixed;
-    left: 50%;
     bottom: 10px;
+    left: 50%;
     transform: translateX(-50%);
+    width: auto;
     margin-top: 0;
     z-index: 9999;
+    background: none; /* transparent */
   }
 
   .kofi-sidebar-button img {
     height: 40px;
+    max-width: 90%;
   }
 }
 
@@ -427,12 +434,12 @@ transform: translate(-50%, -5px);
 <div>Posts Posted: <span id="stat-posts">0</span></div>
 <div>Profiles Visited: <span id="stat-profiles">0</span></div>
 <div class="kofi-sidebar-button">
-  <a href="https://ko-fi.com/ethanstelter" target="_blank">
-    <img src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Support me on Ko-fi" />
-  </a>
 </div>
-</div>
-
+<div class="kofi-sidebar-button">
+    <a href="https://ko-fi.com/ethanstelter" target="_blank">
+      <img src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Support me on Ko-fi" />
+    </a>
+  </div>
 
 
 <div id="app-frame">
