--- a/reels.html
+++ b/reels.html
@@ -468,31 +468,30 @@ document.getElementById("reelWrapper").appendChild(reel);
 function createKofiReel() {
   const reel = document.createElement("div");
   reel.className = "reel";
-  reel.style.width = "100%"; // 🔥 Full width
-  reel.style.height = "100%"; // 🔥 Full height
-  reel.style.border = "3px solid #f44"; // 🔥 Thicker border
-  reel.style.borderRadius = "12px"; // 🔥 Rounded corners
-  reel.style.overflow = "hidden"; 
-  reel.style.position = "relative"; 
+  reel.style.width = "100%";
+  reel.style.height = "100%";
+  reel.style.position = "relative";
 
   const inner = document.createElement("div");
   inner.className = "reel-inner";
-  inner.style.background = "linear-gradient(135deg, #1c1c1c, #2c2c2c)";
+  inner.style.background = "linear-gradient(135deg, #1c1c1c, #0f0f0f)"; // Darker matching normal reels
   inner.style.display = "flex";
   inner.style.flexDirection = "column";
   inner.style.alignItems = "center";
   inner.style.justifyContent = "center";
-  inner.style.width = "100%"; // 🔥 Ensure it fills completely
-  inner.style.height = "100%"; 
+  inner.style.width = "100%";
+  inner.style.height = "100%";
   inner.style.padding = "20px";
 
   inner.innerHTML = `
-    <div style="text-align: center; font-size: 2rem; line-height: 2.5rem; color: #fff; margin-bottom: 20px;">
+    <div style="text-align: center; font-size: 2.4rem; font-weight: bold; line-height: 2.8rem; color: #fff; margin-bottom: 25px;">
       <div>Enjoying the Void?</div>
       <div>Support it on Ko-fi!</div>
     </div>
-    <a href="https://ko-fi.com/ethanstelter" target="_blank" style="margin-top: 10px;">
-      <img src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Buy Me a Coffee at ko-fi.com" style="height: 70px; border: none;">
+    <a href="https://ko-fi.com/ethanstelter" target="_blank" style="text-decoration: none;">
+      <div style="margin-top: 15px; background-color: #f44; padding: 15px 30px; border-radius: 30px; color: #fff; font-weight: bold; font-size: 1.5rem; display: inline-block;">
+        Buy Me a Coffee
+      </div>
     </a>
     <div class="user-info" style="position: absolute; bottom: 70px; left: 10px; display: flex; align-items: center; color: inherit;">
       <div style="font-size: 32px; margin-right: 10px;">☕</div>
@@ -503,6 +502,7 @@ function createKofiReel() {
   reel.appendChild(inner);
   document.getElementById("reelWrapper").appendChild(reel);
 }
+
 
 
 
