--- a/reels.html
+++ b/reels.html
@@ -474,7 +474,7 @@ function createKofiReel() {
 
   const inner = document.createElement("div");
   inner.className = "reel-inner";
-  inner.style.background = "linear-gradient(135deg, #1c1c1c, #0f0f0f)"; // Darker matching normal reels
+  inner.style.background = "linear-gradient(135deg, #1c1c1c, #0f0f0f)";
   inner.style.display = "flex";
   inner.style.flexDirection = "column";
   inner.style.alignItems = "center";
@@ -489,8 +489,9 @@ function createKofiReel() {
       <div>Support it on Ko-fi!</div>
     </div>
     <a href="https://ko-fi.com/ethanstelter" target="_blank" style="text-decoration: none;">
-      <div style="margin-top: 15px; background-color: #f44; padding: 15px 30px; border-radius: 30px; color: #fff; font-weight: bold; font-size: 1.5rem; display: inline-block;">
-        Buy Me a Coffee
+      <div style="margin-top: 15px; background-color: #f44; padding: 15px 30px; border-radius: 30px; color: #fff; font-weight: bold; font-size: 1.5rem; display: flex; align-items: center; justify-content: center; gap: 10px;">
+        <img src="https://storage.ko-fi.com/cdn/kofi5.png" alt="Ko-fi Logo" style="height: 30px;">
+        <span>Buy Me a Coffee</span>
       </div>
     </a>
     <div class="user-info" style="position: absolute; bottom: 70px; left: 10px; display: flex; align-items: center; color: inherit;">
