--- a/reels.html
+++ b/reels.html
@@ -488,11 +488,9 @@ function createKofiReel() {
       <div>Enjoying the Void?</div>
       <div>Support it on Ko-fi!</div>
     </div>
-    <a href="https://ko-fi.com/ethanstelter" target="_blank" style="text-decoration: none;">
-      <div style="margin-top: 15px; background-color: #f44; padding: 15px 30px; border-radius: 30px; color: #fff; font-weight: bold; font-size: 1.5rem; display: flex; align-items: center; justify-content: center; gap: 10px;">
-        <img src="https://storage.ko-fi.com/cdn/kofi5.png" alt="Ko-fi Logo" style="height: 30px;">
-        <span>Buy Me a Coffee</span>
-      </div>
+    <a href="https://ko-fi.com/ethanstelter" target="_blank" style="background-color: #f44; padding: 12px 24px; border-radius: 30px; color: #fff; font-weight: bold; font-size: 1.5rem; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 15px;">
+      <img src="https://storage.ko-fi.com/cdn/kofi5.png" alt="Ko-fi Logo" style="height: 30px;">
+      <span>Buy Me a Coffee</span>
     </a>
     <div class="user-info" style="position: absolute; bottom: 70px; left: 10px; display: flex; align-items: center; color: inherit;">
       <div style="font-size: 32px; margin-right: 10px;">☕</div>
