--- a/reels.html
+++ b/reels.html
@@ -474,7 +474,7 @@ function createKofiReel() {
 
   const inner = document.createElement("div");
   inner.className = "reel-inner";
-  inner.style.background = "linear-gradient(135deg, #1c1c1c, #0f0f0f)";
+  inner.style.backgroundColor = "#f44"; // 🔥 Red background!
   inner.style.display = "flex";
   inner.style.flexDirection = "column";
   inner.style.alignItems = "center";
@@ -488,19 +488,20 @@ function createKofiReel() {
       <div>Enjoying the Void?</div>
       <div>Support it on Ko-fi!</div>
     </div>
-    <a href="https://ko-fi.com/ethanstelter" target="_blank" style="background-color: #f44; padding: 12px 24px; border-radius: 30px; color: #fff; font-weight: bold; font-size: 1.5rem; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 15px;">
-      <img src="https://storage.ko-fi.com/cdn/kofi5.png" alt="Ko-fi Logo" style="height: 30px;">
-      <span>Buy Me a Coffee</span>
+    <a href="https://ko-fi.com/ethanstelter" target="_blank" style="margin-top: 15px;">
+      <img src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Buy Me a Coffee at ko-fi.com" style="height: 70px; border: none;">
     </a>
     <div class="user-info" style="position: absolute; bottom: 70px; left: 10px; display: flex; align-items: center; color: inherit;">
       <div style="font-size: 32px; margin-right: 10px;">☕</div>
-      <div class="username" style="font-size: 0.9rem; color: #ccc;">@SupportMe</div>
+      <div class="username" style="font-size: 0.9rem; color: #fff;">@SupportMe</div>
     </div>
   `;
 
   reel.appendChild(inner);
   document.getElementById("reelWrapper").appendChild(reel);
 }
+
+
 
 
 
