--- a/reels.html
+++ b/reels.html
@@ -474,7 +474,11 @@ function createKofiReel() {
 
   const inner = document.createElement("div");
   inner.className = "reel-inner";
-  inner.style.backgroundColor = "#f44"; // 🔥 Red background!
+  inner.style.backgroundColor = "#1c1c1c"; // 🔥 Dark gray base
+  inner.style.backgroundImage = "url('https://www.transparenttextures.com/patterns/cartographer.png')"; // Topography-like pattern
+  inner.style.backgroundSize = "cover";
+  inner.style.backgroundRepeat = "repeat";
+  inner.style.opacity = "0.95"; // Slight transparency to make it feel clean
   inner.style.display = "flex";
   inner.style.flexDirection = "column";
   inner.style.alignItems = "center";
@@ -493,19 +497,13 @@ function createKofiReel() {
     </a>
     <div class="user-info" style="position: absolute; bottom: 70px; left: 10px; display: flex; align-items: center; color: inherit;">
       <div style="font-size: 32px; margin-right: 10px;">☕</div>
-      <div class="username" style="font-size: 0.9rem; color: #fff;">@SupportMe</div>
+      <div class="username" style="font-size: 0.9rem; color: #ccc;">@SupportMe</div>
     </div>
   `;
 
   reel.appendChild(inner);
   document.getElementById("reelWrapper").appendChild(reel);
 }
-
-
-
-
-
-
 
 
 
