--- a/reels.html
+++ b/reels.html
@@ -475,14 +475,17 @@ function createKofiReel() {
   const inner = document.createElement("div");
   inner.className = "reel-inner";
   inner.style.backgroundColor = "#1c1c1c"; // Dark background
-  inner.style.backgroundImage = `url('data:image/svg+xml;utf8,
-    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-      <path d="M0 40 L40 0" stroke="%23f44" stroke-width="2"/>
-      <path d="M-10 30 L30 -10" stroke="%23f44" stroke-width="2"/>
-      <path d="M10 50 L50 10" stroke="%23f44" stroke-width="2"/>
-    </svg>')`;
+  inner.style.backgroundImage = `
+    repeating-radial-gradient(
+      circle at center,
+      #f44 0px,
+      #f44 1px,
+      transparent 2px,
+      transparent 6px
+    )
+  `;
+  inner.style.backgroundSize = "30px 30px"; // Spacing of the pattern
   inner.style.backgroundRepeat = "repeat";
-  inner.style.backgroundSize = "40px 40px";
   inner.style.display = "flex";
   inner.style.flexDirection = "column";
   inner.style.alignItems = "center";
@@ -508,6 +511,7 @@ function createKofiReel() {
   reel.appendChild(inner);
   document.getElementById("reelWrapper").appendChild(reel);
 }
+
 
 
 function handleLike(btn) {
