--- a/reels.html
+++ b/reels.html
@@ -479,12 +479,12 @@ function createKofiReel() {
     repeating-radial-gradient(
       circle at center,
       #f44 0px,
-      #f44 1px,
-      transparent 2px,
-      transparent 6px
+      #f44 0.5px,
+      transparent 1px,
+      transparent 40px
     )
   `;
-  inner.style.backgroundSize = "30px 30px"; // Spacing of the pattern
+  inner.style.backgroundSize = "50px 50px"; // Bigger spacing between red dots
   inner.style.backgroundRepeat = "repeat";
   inner.style.display = "flex";
   inner.style.flexDirection = "column";
