--- a/story.html
+++ b/story.html
@@ -470,7 +470,24 @@
 
           storyWrapper.appendChild(slide);
         });
+// Insert a special Ko-fi support story
+const kofiSlide = document.createElement("div");
+kofiSlide.className = "story-slide";
 
+kofiSlide.innerHTML = `
+  <div style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center;">
+    <img class="avatar" src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Support Me on Ko-fi">
+    <div class="username">@SupportTheVoid</div>
+  </div>
+  <div class="message">Enjoying the Void?<br>Support it on Ko-fi!</div>
+  <a href="https://ko-fi.com/ethanstelter" target="_blank" style="margin-top: 15px;">
+    <img src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Buy Me a Coffee" style="height: 60px; border: none;">
+  </a>
+`;
+
+storyWrapper.appendChild(kofiSlide);
+
+        
         document.addEventListener("click", function (e) {
   const anchor = e.target.closest("a[href^='user.html?user=']");
   if (anchor) {
