--- a/story.html
+++ b/story.html
@@ -477,23 +477,27 @@ usernames.forEach((username, i) => {
 
 // ✅ Now insert the Ko-fi story manually
 // Insert a special Ko-fi support story
+// Insert a special Ko-fi support story
 const kofiSlide = document.createElement("div");
 kofiSlide.className = "story-slide";
 kofiSlide.style.backgroundColor = "#2b2b2b"; // ✅ Lighter gray background for Ko-fi story
 
 kofiSlide.innerHTML = `
   <div style="display: flex; flex-direction: column; align-items: center; margin-top: 20px;">
-    <img class="avatar" src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Coffee Logo" style="width: 80px; height: 80px; border-radius: 50%; border: 2px solid #f44;">
-    <div class="username" style="margin-top: 10px; font-size: 1.2rem; font-weight: bold; color: #fff;">@SupportMe</div>
+    <div class="avatar" style="font-size: 48px; border: 2px solid #f44; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; background-color: #1c1c1c;">
+      ☕
+    </div>
+    <div class="username" style="margin-top: 10px; font-size: 1rem; font-weight: bold; color: #fff;">@SupportMe</div>
   </div>
   <div class="message" style="font-size: 1.8rem; font-weight: bold; color: #fff; margin-top: 40px;">Enjoying the Void?<br>Support it on Ko-fi!</div>
-  <a href="https://ko-fi.com/ethanstelter" target="_blank" style="margin-top: 20px; display: inline-block; background-color: #f44; padding: 12px 24px; border-radius: 30px; color: #fff; font-size: 1.5rem; font-weight: bold; text-decoration: none;">
-    Buy Me a Coffee
+  <a href="https://ko-fi.com/ethanstelter" target="_blank" style="margin-top: 20px;">
+    <img src="https://storage.ko-fi.com/cdn/kofi3.png" alt="Buy Me a Coffee" style="height: 60px; border: none;">
   </a>
 `;
 
 storyWrapper.appendChild(kofiSlide);
 storySlides.push(kofiSlide); // ✅ Add the Ko-fi slide to slides array
+
 
 
 
